tests/unit/guardrails/restrict-secret-creation/resources.yaml
apiVersion: v1
kind: Secret
metadata:
  name: eso-created-secret
  namespace: default
type: Opaque
data:
  password: cGFzc3dvcmQ=
---
apiVersion: v1
kind: Secret
metadata:
  name: manual-secret
  namespace: default
type: Opaque
data:
  password: cGFzc3dvcmQ=
