tests/unit/guardrails/restrict-secret-creation/user-info-manual.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: UserInfo
metadata:
  name: manual-secret
clusterRoles: []
subjects:
  - kind: User
    name: jane-doe
